clusters/home/apps/nas/avahi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avahi
  labels:
    app: avahi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avahi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: avahi
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: thisisqasim/avahi:latest
        name: avahi
        volumeMounts:
        - mountPath: /etc/avahi/avahi-daemon.conf
          subPath: avahi-daemon.conf
          name: config
        - mountPath: /etc/avahi/services/smb.service
          subPath: smb.service
          name: config
        - mountPath: /run/avahi-daemon
          name: tmpfs
        resources:
          requests:
            cpu: "10m"
            memory: "12Mi"
          limits:
            cpu: "3000m"
            memory: "5120Mi"
      volumes:
        - name: config
          configMap:
            name: avahi
        - name: tmpfs
          emptyDir:
            medium: Memory
