clusters/home/apps/nas/samba.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  labels:
    app: samba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: samba
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: servercontainers/samba:smbd-only-latest
        name: samba
        volumeMounts:
        - mountPath: /shares/qasim
          name: external
        - mountPath: /shares/media
          name: media
        ports:
        - containerPort: 445
        - containerPort: 139
        livenessProbe:
          tcpSocket:
            port: 445
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 445
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "3000m"
            memory: "5120Mi"
      volumes:
        - name: external
          hostPath:
            path: /mnt/external
            type: Directory
        - name: media
          hostPath:
            path: /mnt/external/media
            type: Directory
