clusters/home/apps/nas/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - port: 8080
    name: http
    targetPort: http
  - port: 7867
    name: push
    targetPort: push
  type: ClusterIP
  selector:
    app: nextcloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        resources:
          requests:
            cpu: 0.2
            memory: "500Mi"
          limits:
            cpu: 2
            memory: "2Gi"
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          tcpSocket:
            port: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - name: ports
          mountPath: /etc/apache2/ports.conf
          subPath: ports.conf
        - name: external
          mountPath: /external
        - name: custom-apps
          mountPath: /var/www/html/custom_apps
        - name: config
          mountPath: /var/www/html/config
        - name: data
          mountPath: /var/www/html/data
        - name: nextcloud
          mountPath: /var/www/html
      - name: push
        image: nextcloud:latest
        command:
        - /var/www/html/custom_apps/notify_push/bin/x86_64/notify_push
        - /var/www/html/config/config.php
        resources:
          requests:
            cpu: 0.2
            memory: "100Mi"
          limits:
            cpu: 1
            memory: "2Gi"
        ports:
        - containerPort: 7867
          name: push
        readinessProbe:
          tcpSocket:
            port: 7867
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - name: external
          mountPath: /external
        - name: custom-apps
          mountPath: /var/www/html/custom_apps
        - name: config
          mountPath: /var/www/html/config
        - name: data
          mountPath: /var/www/html/data
      - name: cron
        image: nextcloud:latest
        command:
        - /bin/bash
        - -c
        - |
          set -eu
          ./occ maintenance:update:htaccess
          sed -i '/protected \$allowedFormActionDomains = \[/a '\''\*.'$CSP_DOMAIN''\'',' \
            lib/public/AppFramework/Http/ContentSecurityPolicy.php
          sed -i '/protected \$allowedFormActionDomains = \[/a '\'''$CSP_DOMAIN''\'',' \
            lib/public/AppFramework/Http/ContentSecurityPolicy.php
          while sleep 300;do php -f cron.php; done
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - name: external
          mountPath: /external
        - name: custom-apps
          mountPath: /var/www/html/custom_apps
        - name: config
          mountPath: /var/www/html/config
        - name: data
          mountPath: /var/www/html/data
        - name: nextcloud
          mountPath: /var/www/html
      volumes:
        - name: ports
          configMap:
            name: nextcloud
        - name: external
          hostPath:
            path: /mnt/external
            type: Directory
        - name: custom-apps
          hostPath:
            path: /home/nas/nextcloud/custom_apps
            type: Directory
        - name: config
          hostPath:
            path: /home/nas/nextcloud/config
            type: Directory
        - name: data
          hostPath:
            path: /home/nas/nextcloud/data
            type: Directory
        - name: nextcloud
          emptyDir: {}
      enableServiceLinks: false
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  labels:
    app: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
  - hosts:
    - cloud.home.com
  rules:
  - host: cloud.home.com
    http:
      paths:
      - path: /push
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 7867
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 8080
